--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<h1>apndx.org</h1>
-<p>Open access publishing for supplementary material.</p>
+<p>Open access publishing for academic supplementary material.</p>
