--- a/pub/icnp/logrel/examples/compute_service.v.html
+++ b/pub/icnp/logrel/examples/compute_service.v.html
@@ -257,7 +257,7 @@
 <span class="normal"><a href="#line-257">257</a></span></pre></div></td><td class="code"><div><pre><span></span><span id="linespan-1"><a id="line-1" name="line-1"></a><span class="c">(** This file contains a computation service with the type</span>
 </span><span id="linespan-2"><a id="line-2" name="line-2"></a>
 </span><span id="linespan-3"><a id="line-3" name="line-3"></a><span class="c">  μ rec. &amp; { cont : ? (X:★) (() ⊸ X). ! X. rec,</span>
-</span><span id="linespan-4"><a id="line-4" name="line-4"></a><span class="c">             stop : end }</span>
+</span><span id="linespan-4"><a id="line-4" name="line-4"></a><span class="c">             stop : ?end }</span>
 </span><span id="linespan-5"><a id="line-5" name="line-5"></a>
 </span><span id="linespan-6"><a id="line-6" name="line-6"></a><span class="c">It recursively receives computations, computes them, and then</span>
 </span><span id="linespan-7"><a id="line-7" name="line-7"></a><span class="c">sends back the results.</span>
