--- a/pub/iqe6/stackat.html
+++ b/pub/iqe6/stackat.html
@@ -23,24 +23,38 @@
             margin-top: 20px;
         }
 
-        h1 {
+        .header {
             color: #343a40;
             margin-bottom: 30px;
             margin-left: -30px;
             margin-right: -30px;
             margin-top: -30px;
-            padding-top: 10px;
             text-align: center;
             background-color: #f8f9fa;
             border-bottom: 1px solid #dee2e6;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
             padding-bottom: 15px;
+            padding: 0;
+            position: relative;
+        }
+
+        .header h1 {
+            color: #343a40;
+            text-align: center;
+            background-color: #f8f9fa;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 2.5rem;
             font-weight: bold;
-            letter-spacing: -0.5px;
-            padding: 25px 0;
+            /* letter-spacing: -0.5px; */
+            padding: 0;
+            padding-top: 10px;
+        }
+
+        .header .toprightlink {
+            position: absolute;
+            right: 10px;
+            top: 10px;
         }
 
         /* Main grid layout */
@@ -338,6 +352,8 @@
 </head>
 <body>
     <div class="container">
+        <div class="header">
+        <a href="stackatv1.html" class="toprightlink">Switch to Javascript version</a>
         <h1>
             StacKAT
             <svg width="40" height="40" viewBox="0 0 40 40" style="margin-right: 10px; vertical-align: middle;">
@@ -372,6 +388,7 @@
             </svg>
             Playground
         </h1>
+        </div>
 
         <div class="playground-grid">
             <!-- Expression 1 -->
@@ -486,7 +503,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/addon/hint/show-hint.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/addon/edit/matchbrackets.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/addon/edit/closebrackets.min.js"></script>
-    <script type="module" src="stackat_wasm_loader.js"></script>
+    <script type="module" src="./stackat_wasm_loader.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
