--- a/pub/iqe6/stackatv1.html
+++ b/pub/iqe6/stackatv1.html
@@ -934,7 +934,7 @@
 </head>
 
 <body>
-    <h1>StacKAT</h1>
+    <h1>StacKAT <a style="font-size: 16px;" href="stackat.html">(Switch to WASM version)</a></h1>
 
     <div id="inputs">
         <div class="editor" id="editor1">
