--- a/pub/iqe6/stackat.html
+++ b/pub/iqe6/stackat.html
@@ -353,7 +353,7 @@
 <body>
     <div class="container">
         <div class="header">
-        <a href="stackatv1.html" class="toprightlink">Switch to Javascript version</a>
+        <a href="stackatv1.html" class="toprightlink">Switch to old version</a>
         <h1>
             StacKAT
             <svg width="40" height="40" viewBox="0 0 40 40" style="margin-right: 10px; vertical-align: middle;">
