--- a/pub/iqe6/stackatv1.html
+++ b/pub/iqe6/stackatv1.html
@@ -1246,7 +1246,7 @@
 </head>
 
 <body>
-    <h1>StacKAT <a style="font-size: 16px;" href="stackat.html">(Switch to WASM version)</a></h1>
+    <h1>StacKAT <a style="font-size: 16px;" href="stackat.html">(Switch to new version)</a></h1>
 
     <div style="margin-bottom: 20px">
         <!-- <button id="nextExample" style="font-size: 16px; padding: 8px 16px; cursor: pointer;">Next Example</button> -->
