--- a/pub/iqe6/stackat.html
+++ b/pub/iqe6/stackat.html
@@ -375,10 +375,30 @@
                       stroke="#343a40" stroke-width="1"/>
                 <rect x="12" y="10" width="16" height="6" fill="url(#stackGradient)" rx="2"
                       stroke="#343a40" stroke-width="1"/>
+                <!-- Cat feet with gradient -->
+                <!-- Left foot -->
+                <rect x="12" y="34" width="6" height="4" fill="url(#stackGradient)" rx="2"
+                      stroke="#343a40" stroke-width="1"/>
+
+                <!-- Right foot -->
+                <rect x="22" y="34" width="6" height="4" fill="url(#stackGradient)" rx="2"
+                      stroke="#343a40" stroke-width="1"/>
 
                 <!-- Cat ears with gradient -->
-                <path d="M10 6 L15 12 L20 6 Z" fill="#495057" stroke="#343a40"/>
-                <path d="M20 6 L25 12 L30 6 Z" fill="#495057" stroke="#343a40"/>
+                <!-- Left ear -->
+                <rect x="12" y="4.5" width="6" height="4" fill="url(#stackGradient)" rx="2"
+                      stroke="#343a40" stroke-width="1"/>
+
+                <!-- Right ear -->
+                <rect x="22" y="4.5" width="6" height="4" fill="url(#stackGradient)" rx="2"
+                      stroke="#343a40" stroke-width="1"/>
+
+                <!-- Cat eyes -->
+                <circle cx="16" cy="14" r="2" fill="white"/>
+                <circle cx="24" cy="14" r="2" fill="white"/>
+                <!-- Cat pupils -->
+                <circle cx="16" cy="14" r="0.75" fill="#343a40"/>
+                <circle cx="24" cy="14" r="0.75" fill="#343a40"/>
 
                 <!-- Whiskers -->
                 <line x1="8" y1="15" x2="14" y2="14" stroke="#343a40" stroke-width="0.5"/>
