--- a/pub/iqe6/stackat.html
+++ b/pub/iqe6/stackat.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>StacKAT Playground</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Add CodeMirror for syntax highlighting -->
@@ -86,6 +86,193 @@
             grid-template-rows: auto auto 1fr;
             gap: 20px;
             margin-bottom: 30px;
+        }
+
+        /* Media query for mobile devices */
+        @media (max-width: 768px) {
+            body {
+                padding: 10px;
+                overflow-x: hidden;
+            }
+
+            .playground-grid {
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: auto auto auto auto auto auto auto;
+                gap: 15px;
+            }
+
+            .expression1-area {
+                grid-column: 1 !important;
+                grid-row: 1 !important;
+                width: 100%;
+            }
+
+            .result-badge-area {
+                grid-column: 1 !important;
+                grid-row: 2 !important;
+                padding-top: 0;
+                padding-bottom: 0.5rem;
+                justify-content: center;
+                width: 100%;
+            }
+
+            .expression2-area {
+                grid-column: 1 !important;
+                grid-row: 3 !important;
+                width: 100%;
+            }
+
+            .parse-error1-area {
+                grid-column: 1 !important;
+                grid-row: 4 !important;
+                width: 100%;
+            }
+
+            .parse-error2-area {
+                grid-column: 1 !important;
+                grid-row: 5 !important;
+                width: 100%;
+            }
+
+            .counter-example1-area {
+                grid-column: 1 !important;
+                grid-row: 6 !important;
+                width: 100%;
+            }
+
+            .counter-example2-area {
+                grid-column: 1 !important;
+                grid-row: 7 !important;
+                width: 100%;
+            }
+
+            .container {
+                padding: 15px;
+                width: 100%;
+                max-width: 100%;
+                overflow-x: hidden;
+            }
+
+            .header {
+                margin-left: -15px;
+                margin-right: -15px;
+                margin-top: -15px;
+            }
+
+            .header h1 {
+                font-size: 1.8rem;
+            }
+
+            .result-badge {
+                width: 100%;
+                max-width: 200px;
+            }
+
+            /* Make the syntax guide table responsive */
+            .syntax-guide {
+                overflow-x: auto;
+                padding: 10px;
+                margin-top: 20px;
+            }
+
+            .syntax-guide table {
+                font-size: 0.9rem;
+            }
+
+            /* Adjust example pairs for mobile */
+            .example-pairs-section {
+                padding: 10px;
+                margin-top: 20px;
+            }
+
+            .example-pairs-section .row {
+                flex-direction: column;
+            }
+
+            .example-pairs-section .col-md-6 {
+                width: 100%;
+            }
+
+            .example-pair-item {
+                font-size: 0.8rem;
+                padding: 6px 8px;
+            }
+
+            /* Adjust CodeMirror for mobile */
+            .CodeMirror {
+                height: 120px;
+                font-size: 0.9rem;
+            }
+
+            /* Make the top right link more mobile-friendly */
+            .header .toprightlink {
+                font-size: 0.8rem;
+                top: 5px;
+                right: 5px;
+            }
+
+            /* Improve counter example display on mobile */
+            .counter-example {
+                padding: 10px;
+            }
+
+            .counter-example-item {
+                padding: 10px;
+            }
+
+            /* Adjust result badge for better mobile display */
+            .result-badge {
+                font-size: 1rem;
+                padding: 6px 12px;
+            }
+
+            /* Make the cat logo smaller on mobile */
+            #cat-logo {
+                width: 30px;
+                height: 30px;
+            }
+
+            /* Ensure CodeMirror editors are properly sized */
+            #editor1-container, #editor2-container {
+                width: 100%;
+            }
+
+            #editor1-container .CodeMirror, #editor2-container .CodeMirror {
+                width: 100%;
+                height: 120px;
+            }
+
+            /* Ensure example pairs display properly */
+            .example-pair-item {
+                white-space: normal;
+                line-height: 1.4;
+            }
+
+            .example-left, .example-right {
+                max-width: 40%;
+            }
+
+            /* Fix example pairs section layout */
+            .example-pairs-section {
+                padding: 10px;
+            }
+
+            .example-pairs-section .row {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .example-pairs-section .col-md-6 {
+                width: 100%;
+                max-width: 100%;
+                flex: 0 0 100%;
+            }
+
+            /* Ensure syntax guide is scrollable on mobile */
+            .syntax-guide {
+                overflow-x: auto;
+            }
         }
 
         /* Grid areas */
